<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tinkerforge_imu_ros</name>
  <version>1.0.0</version>
  <description>The tinkerforge_imu_ros package</description>

  <maintainer email="stevenmacenski@gmail.com">steve macenski</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
